...
            />
          )}

          {email.is_archived && (
            <EmailTag
              className="flex-shrink-0 hidden sm:inline-flex"
              label="Archived"
              muted={email.is_read}
              size="default"
              variant="archived"
            />
          )}

...
